--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
-fastapi
-uvicorn
-pydantic
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.1.0
+click==8.1.8
+fastapi==0.115.11
+frozenlist==1.5.0
+h11==0.14.0
+idna==3.10
+multidict==6.1.0
+propcache==0.3.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+sniffio==1.3.1
+starlette==0.46.0
+typing_extensions==4.12.2
+uvicorn==0.34.0
+yarl==1.18.3
